# Intel-NEO-Xtd

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.ninja  build.sh  cmake.sh  script.sh
SPIRV-Tools/source/opt/: trim_capabilities_pass.cpp
SPIRV-Tools/source/val/: validate_type.cpp
SPIRV-Tools/test/opt/: types_test.cpp
gmmlib/: CMakeLists.txt
gmmlib/Source/GmmLib/: os_release_info.cmake
gmmlib/Source/GmmLib/ULT/googletest/gtest/: gtest.h
igc/: CMakeLists.txt  README.md
igc/IGC/: CMakeLists.txt
igc/IGC/AdaptorCommon/: LegalizeFunctionSignatures.cpp  ProcessFuncAttributes.cpp
igc/IGC/AdaptorCommon/RayTracing/: AutoGenRTStackAccessPrivateOS.h  RTArgs.h  RTBuilder.h  SplitAsyncUtils.h
igc/IGC/AdaptorOCL/: UnifyIROCL.cpp  dllInterfaceCompute.cpp
igc/IGC/AdaptorOCL/SPIRV/: SPIRVInternal.h  SPIRVReader.cpp
igc/IGC/AdaptorOCL/ocl_igc_interface/impl/: fcl_ocl_translation_ctx_impl.cpp
igc/IGC/AdaptorOCL/preprocess_spvir/: PromoteBools.cpp
igc/IGC/AdaptorOCL/preprocess_spvir/HandleSPIRVDecorations/: HandleSpirvDecorationMetadata.cpp
igc/IGC/BiFModule/: CMakeLists.txt
igc/IGC/BiFModule/Headers/: igc_bridge_builtins.h  spirv.h  spirv_types.h
igc/IGC/BiFModule/Implementation/: IGCBiF_Bridge_Implementation.cl  IGCBiF_Intrinsics_Lsc.cl  assert.cl  atomics.cl  device_side_enqueue.cl  group.cl  images.cl  pipe.cl  sycl_image_handle.cl
igc/IGC/BiFModule/Languages/OpenCL/: IBiF_Device_Enqueue.cl  IBiF_Images.cl  IBiF_Impl.cl  IBiF_Sub_Groups.cl
igc/IGC/BiFModule/Languages/OpenCL/PointerSize/: IBiF_Device_Enqueue_size_t.cl  IBiF_size_t.cl
igc/IGC/BiFModule/Languages/OpenCL/PreRelease/: IBiF_DeviceSideVME_VA.cl  IBiF_Image_Atomics.cl  IBiF_matrix.cl  opencl_cth_pre_release.h
igc/IGC/CMFE/AdaptorCM/: Frontend.h
igc/IGC/Compiler/: CustomSafeOptPass.cpp  PromoteResourceToDirectAS.cpp
igc/IGC/Compiler/CISACodeGen/: CastToGASAnalysis.cpp  ConstantCoalescing.cpp  EmitVISAPass.cpp  EstimateFunctionSize.cpp  LSCControlsAnalysisPass.cpp  SinkCommonOffsetFromGEP.cpp  VectorProcess.cpp  getCacheOpts.cpp  getCacheOpts.h
igc/IGC/Compiler/Legalizer/: InstExpander.cpp  PeepholeTypeLegalizer.cpp
igc/IGC/Compiler/MetaDataApi/: IGCMetaDataHelper.cpp
igc/IGC/Compiler/Optimizer/OpenCLPasses/Atomics/: ResolveOCLAtomics.cpp
igc/IGC/Compiler/Optimizer/OpenCLPasses/BIFTransforms/: BIFTransforms.cpp
igc/IGC/Compiler/Optimizer/OpenCLPasses/DpasFuncs/: DpasFuncsResolution.cpp
igc/IGC/Compiler/Optimizer/OpenCLPasses/ExtensionFuncs/: ExtensionFuncResolution.cpp
igc/IGC/Compiler/Optimizer/OpenCLPasses/GenericAddressResolution/: GASPropagator.cpp
igc/IGC/Compiler/Optimizer/OpenCLPasses/JointMatrixFuncsResolutionPass/: JointMatrixFuncsResolutionPass.cpp
igc/IGC/Compiler/Optimizer/OpenCLPasses/LSCFuncs/: LSCFuncsResolution.cpp
igc/IGC/Compiler/Optimizer/OpenCLPasses/PrivateMemory/: PrivateMemoryResolution.cpp
igc/IGC/Compiler/Optimizer/OpenCLPasses/SubGroupFuncs/: SubGroupFuncsResolution.cpp
igc/IGC/Compiler/Optimizer/OpenCLPasses/WIFuncs/: WIFuncResolution.cpp
igc/IGC/DebugInfo/: DIE.cpp  DIE.hpp  DwarfCompileUnit.cpp  DwarfCompileUnit.hpp  DwarfExpression.cpp  DwarfExpression.hpp  StreamEmitter.cpp  StreamEmitter.hpp  VISAModule.cpp
igc/IGC/ElfPackager/: main.cpp
igc/IGC/GenISAIntrinsics/: CMakeLists.txt  GenIntrinsicInst.h  GenIntrinsics.cpp  GenIntrinsics.h  LlvmTypesMapping.cpp
igc/IGC/GenISAIntrinsics/generator/: Intrinsic_definition_objects.py  Intrinsic_definition_translation.py  Intrinsic_generator.py
igc/IGC/MDAutogen/: CMakeLists.txt
igc/IGC/Metrics/: IGCMetricImpl.cpp
igc/IGC/Options/src/: Options.cpp
igc/IGC/PCH/: llvm.h
igc/IGC/VectorCompiler/: CMakeLists.txt
igc/IGC/VectorCompiler/CMCL/lib/Support/: BuiltinTranslator.cpp
igc/IGC/VectorCompiler/cmake/: handle_vc_intrinsics.cmake
igc/IGC/VectorCompiler/igcdeps/src/: TranslationInterface.cpp
igc/IGC/VectorCompiler/include/vc/GenXCodeGen/: TargetMachine.h
igc/IGC/VectorCompiler/include/vc/InternalIntrinsics/: InternalIntrinsicInst.h  Intrinsics.py
igc/IGC/VectorCompiler/include/vc/Utils/GenX/: Printf.h  TypeSize.h
igc/IGC/VectorCompiler/lib/Driver/: Driver.cpp
igc/IGC/VectorCompiler/lib/GenXCodeGen/: GenXArgIndirection.cpp  GenXCisaBuilder.cpp  GenXDebugLegalization.cpp  GenXLiveRanges.cpp  GenXLiveness.cpp  GenXLowerAggrCopies.cpp  GenXStackUsage.cpp  GenXStructSplitter.cpp  GenXUtil.h
igc/IGC/VectorCompiler/lib/GenXOpts/CMPacketize/: GenXPacketize.cpp  PacketBuilder.h
igc/IGC/VectorCompiler/lib/GenXOpts/CMTrans/: GenXImportOCLBiF.cpp  GenXPrintfLegalization.cpp  GenXTranslateSPIRVBuiltins.cpp
igc/IGC/VectorCompiler/lib/Utils/GenX/: Printf.cpp
igc/IGC/VectorCompiler/lib/Utils/General/: DebugInfo.cpp
igc/IGC/WrapperLLVM/include/llvmWrapper/ADT/: Optional.h
igc/IGC/WrapperLLVM/include/llvmWrapper/Analysis/: CallGraph.h
igc/IGC/WrapperLLVM/include/llvmWrapper/IR/: IRBuilder.h  IntrinsicInst.h  LLVMContext.h
igc/IGC/common/: IGCIRBuilder.h  LLVMUtils.cpp  MDFrameWork.cpp  SerializePrintMetaDataPass.cpp  Types.hpp  igc_regkeys.cpp
igc/IGC/common/debug/: Dump.hpp
igc/visa/: CMakeLists.txt
igc/visa/iga/GEDLibrary/GED_external/: CMakeLists.txt
igc/visa/iga/IGALibrary/Backend/Native/: MInst.hpp
igc/visa/iga/IGALibrary/Models/: Models.cpp
neo/level_zero/core/source/cmdlist/: cmdlist.h
neo/level_zero/core/source/cmdqueue/: cmdqueue.cpp
neo/level_zero/core/source/device/: bcs_split.cpp
neo/opencl/source/command_queue/: enqueue_common.h
neo/opencl/test/unit_test/mocks/: mock_buffer.h  mock_command_queue.h
neo/opencl/test/unit_test/offline_compiler/: ocloc_api_tests.cpp
neo/shared/source/compiler_interface/: compiler_interface.cpp
neo/shared/test/common/libult/: ult_command_stream_receiver.h
neo/shared/test/common/mocks/: mock_command_stream_receiver.h  (+1 more)
src/: kernel.cl  kernel.h  main.c
tmp/: bif_errors.txt  bif_sorted.txt
vc-intrinsics/GenXIntrinsics/lib/GenXIntrinsics/: GenXIntrinsics.cpp  GenXSPIRVReaderAdaptor.cpp  GenXSPIRVWriterAdaptor.cpp  GenXSimdCFLowering.cpp  GenXSingleElementVectorUtil.cpp
(+15 files in other folders)
